[tool.poetry]
name = "hgnc-sssom"
version = "0.0.1"
description = "Generates an SSSOM file from HGNC xrefs"
authors = []

[tool.poetry.dependencies]
python = ">=3.7, <=3.9"
sssom = "0.3.3"
koza = "0.1.5"
click = "7.1.2"
biolink_model_pydantic = "0.1.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autoflake = "^1.4"
flake8 = "^3.9.2"
isort = "^5.9.1"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 90
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 90
multi_line_output = 3
include_trailing_comma = true
